      any seed ids are found which don't have exactly 3 decimals (see #193).
    * Made sure that `SpatialCalculator` returns a meaningful error message if
      required columns are missing from DataFrame inputs (#197).
    * Fixed issue in df_to_inventory where a location code of '01' was getting
      converted to '1'. (#199)
  - obsplus.EventBank
    * Added `overwrite_existing` keyword to `put_events` to disable squashing
      existing events if desired (#191).
    * Fixes issue with read inventory casting ints to datetime on pd 1.1.0.
    * Fixed issue which caused reading deleted files from an EventBank to
      raise a TypeError (#198).
    * Added an obscure attribute called 'allow_update_index' for the rare
      cases when index timestamp shouldn't be updated (#201).
  - obsplus.events.pd
    * Made sure that the pre-defined extractors (`*_to_df`) still return all of
      the expected columns if there are no valid objects.
  - obsplus.stations
    * Made sure that location codes and other NSLC components are handled
      consistently within stations_to_df (#199).
  - obsplus.events.merge
    # Added a new function called associate merge for merging one event with
      the closest (defined by median pick time) of several possible events
      (#200).

obsplus 0.1.1
  - obsplus.events
    * Fixed issue with validators flagging picks on stations with the same
      name but different networks (#173).
    * Added `subset` parameter to `get_seed_id_series` for selecting subsets
      of full seed id.
  - obsplus.EventBank
    * Fixed issue where path_structure was overriding a user-specified value
      of `""` (#178)
  - obsplus.structures.fetcher
    * fixed issue with Fetcher raising Pandas error when an inventory with
      duplicate chanenls was used (#183, #184).
  - obsplus.utils
    * Refactored df_to_inventory (#182).
    * Refactored compose_docstring and added function for printing dataframe
      columns and their expected dtypes (#182).